force-app/main/default/objects/EmailMessage/fields/Bypass_Genesys_Task__c.field-meta.xml
<CustomField>
    <fullName>Bypass_Genesys_Task__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This check is to bypass genesys routing task.</description>
    <inlineHelpText>This check is to bypass genesys routing task.</inlineHelpText>
    <label>Bypass Genesys Task</label>
    <type>Checkbox</type>
</CustomField>