force-app/main/default/objects/EmailMessage/fields/ByPassGRByFilter__c.field-meta.xml
<CustomField>
    <fullName>ByPassGRByFilter__c</fullName>
    <defaultValue>false</defaultValue>
    <label>ByPassGRByFilter</label>
    <type>Checkbox</type>
</CustomField>