force-app/main/default/objects/EmailMessage/fields/HourCreation__c.field-meta.xml
<CustomField>
    <fullName>HourCreation__c</fullName>
    <formula>(NOW() - CreatedDate) * 24</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>HourCreation</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>