force-app/main/default/objects/EmailMessage/fields/In_Reply_To_ID__c.field-meta.xml
<CustomField>
    <fullName>In_Reply_To_ID__c</fullName>
    <label>In Reply To ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>