force-app/main/default/objects/EmailMessage/fields/IndicoErrorMessage__c.field-meta.xml
<CustomField>
    <fullName>IndicoErrorMessage__c</fullName>
    <label>IndicoErrorMessage</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>