force-app/main/default/objects/EmailMessage/fields/IndicoStatus__c.field-meta.xml
<CustomField>
    <fullName>IndicoStatus__c</fullName>
    <defaultValue>&quot;New&quot;</defaultValue>
    <label>IndicoStatus</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>New</fullName>
            </value>
            <value>
                <fullName>Pending Indico Processing</fullName>
            </value>
            <value>
                <fullName>Completed</fullName>
            </value>
            <value>
                <fullName>Failed Indico Processing</fullName>
            </value>
            <value>
                <fullName>Error Indico Processing</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>