force-app/main/default/objects/EmailMessage/fields/IsBatchProcessed__c.field-meta.xml
<CustomField>
    <fullName>IsBatchProcessed__c</fullName>
    <defaultValue>false</defaultValue>
    <description>To be marked as true if it was processed by Work Order linking batch.</description>
    <label>IsBatchProcessed</label>
    <type>Checkbox</type>
</CustomField>