force-app/main/default/objects/EmailMessage/fields/isCloned__c.field-meta.xml
<CustomField>
    <fullName>isCloned__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Is Cloned is used when a Email is cloned</description>
    <label>isCloned</label>
    <type>Checkbox</type>
</CustomField>