force-app/main/default/objects/EmailMessage/fields/IsIncoming__c.field-meta.xml
<CustomField>
    <fullName>IsIncoming__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Email Service</description>
    <label>IsIncoming</label>
    <type>Checkbox</type>
</CustomField>