force-app/main/default/objects/EmailMessage/fields/isIndicoEligible__c.field-meta.xml
<CustomField>
    <fullName>isIndicoEligible__c</fullName>
    <defaultValue>false</defaultValue>
    <label>isIndicoEligible</label>
    <type>Checkbox</type>
</CustomField>