force-app/main/default/objects/EmailMessage/fields/IsNonThreadEmail__c.field-meta.xml
<CustomField>
    <fullName>IsNonThreadEmail__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IsNonThreadEmail</label>
    <type>Checkbox</type>
</CustomField>