force-app/main/default/objects/EmailMessage/fields/MarkToDelete__c.field-meta.xml
<CustomField>
    <fullName>MarkToDelete__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Mark To Delete</label>
    <type>Checkbox</type>
</CustomField>