force-app/main/default/objects/EmailMessage/fields/QuickEmail__c.field-meta.xml
<CustomField>
    <fullName>QuickEmail__c</fullName>
    <defaultValue>false</defaultValue>
    <label>QuickEmail</label>
    <type>Checkbox</type>
</CustomField>