force-app/main/default/objects/EmailMessage/fields/Sent_or_Received__c.field-meta.xml
<CustomField>
    <fullName>Sent_or_Received__c</fullName>
    <formula>IF( Incoming , &quot;Received&quot; , IF(IsIncoming__c , &quot;Received&quot; , &quot;Sent&quot;))</formula>
    <label>Sent or Received</label>
    <type>Text</type>
</CustomField>