force-app/main/default/objects/EmailMessage/fields/Tech_New_Case__c.field-meta.xml
<CustomField>
    <fullName>Tech_New_Case__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Tech New Case</label>
    <type>Checkbox</type>
</CustomField>