force-app/main/default/objects/EmailMessage/fields/To_Be_Closed__c.field-meta.xml
<CustomField>
    <fullName>To_Be_Closed__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Needed to identify case for closure.</description>
    <label>To Be Closed</label>
    <type>Checkbox</type>
</CustomField>