force-app/main/default/objects/EmailMessage/fields/To_Be_Processed__c.field-meta.xml
<CustomField>
    <fullName>To_Be_Processed__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field is used to process and purge the Email Message Records in a Batch</description>
    <label>To Be Processed</label>
    <type>Checkbox</type>
</CustomField>