force-app/main/default/objects/EmailMessage/fields/Tracking_Number_Email__c.field-meta.xml
<CustomField>
    <fullName>Tracking_Number_Email__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Tracking Number Email</label>
    <type>Checkbox</type>
</CustomField>