force-app/main/default/objects/EmailMessage/validationRules/DoNotReply.validationRule-meta.xml
<ValidationRule>
    <fullName>DoNotReply</fullName>
    <active>true</active>
    <description>Do Not Reply email cannot be selected as From Address.</description>
    <errorConditionFormula>AND(CONTAINS(FromAddress,  $Label.DoNotReplyFromEmail ),  $Profile.Name    &lt;&gt;   $Label.DoNotReplyProfile )</errorConditionFormula>
    <errorDisplayField>FromAddress</errorDisplayField>
    <errorMessage>Do Not Reply email cannot be selected as From Address.</errorMessage>
</ValidationRule>